<resources>
    <string name="app_name">Hát Karaoke</string>
    <string name="title_fragment_artist">Ca sĩ</string>
    <string name="title_fragment_favorite">Yêu thích</string>
    <string name="title_activity_kmy_recording">Thu âm của tôi</string>
    <string name="title_activity_setting">Cài đặt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_app_version">Ver. %1$s</string>

    <string name="action_settings">Cài đặt</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_record">Thu âm</string>

    <string name="share_send_to">Gửi tới…</string>

    <!-- Search -->
    <string name="search_hint">Tìm video karaoke…</string>
    <string name="no_search_results">Không tìm thấy kết quả cho từ khóa\n“%1$s”</string>
    <string name="btn_more">MORE</string>


    <string name="action_save">Save</string>
    <string name="activity_editrecording_title">Title</string>
    <string name="action_favourite">Favourite</string>
    <string name="nav_home">Nổi bật</string>
    <string name="nav_my_recordings">Thu âm của tôi</string>
    <string name="nav_my_artists">Danh sách ca sĩ</string>
    <string name="nav_my_favourites">Bài hát yêu thích</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_exit">Thoát</string>
    <string name="title_bio">Tiểu sử</string>
    <string name="btn_bio_readmore">đọc tiếp</string>

    <!-- Dialog message -->
    <string name="msg_filename_existed">Bạn đã thu âm bài hát này. Bạn có muốn thu lại không (bài cũ sẽ bị xóa)?</string>
    <string name="msg_delete_file">Bạn có chắc chắn xóa vĩnh viễn bản thu âm này?</string>
    <string name="msg_re_record">It seems like that the most recent recording was not finished. Do you want to re-record this song?</string>

    <!-- Perferences -->
    <string name="prefs_category_audio">Thu âm</string>
    <string name="prefs_audio_volume_title">Âm lượng nhạc nền</string>
    <string name="prefs_audio_volume_summary">Điều chỉnh độ lớn âm lượng của video khi thu âm.</string>
    <string name="prefs_hd_record_title">Thu âm chất lượng cao</string>
    <string name="prefs_hd_record_summary">Bài hát sẽ được thu âm bằng định dạng *.wav và cho chất lượng âm thanh tốt hơn, tuy nhiên sẽ tốn bộ nhớ hơn.</string>
    <string name="prefs_category_about">Về ứng dụng</string>
    <string name="prefs_feedback_title">Phản hồi</string>
    <string name="prefs_feedback_summary">Gửi đánh giá, nhận xét của bạn cho nhà phát triển ứng dụng</string>
    <string name="prefs_version_title">Phiên bản</string>
    <string name="prefs_category_video">Video</string>
    <string name="prefs_hd_preview_title">Chất lượng hình thu nhỏ (thumbnail)</string>
    <string-array name="prefs_preview_quality_entry">
        <item>Thấp</item>
        <item>Cao</item>
    </string-array>
    <string-array name="prefs_preview_quality_value">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Activites -->
    <string name="msg_no_connection">Không thể tải dữ liệu.\nHãy chắc chắn kết nối internet của bạn hoạt động và thử lại.</string>
    <string name="msg_load_data_error">Không thể tải dữ liệu!\nChạm để thử lại.</string>
    <string name="display_no_comment">Không có bình luận.</string>
    <string name="action_save_current">Lưu bản thu âm này</string>
    <string name="action_record_new_song">Hát bài hát khác</string>
    <string name="action_record_restart">Hát lại từ đầu</string>
    <string name="action_record_resume">Resume</string>
    <string name="info_biography_not_available">Dữ liệu chưa được cập nhật.</string>
    <string name="info_no_favorite_video">Chưa có video yêu thích.</string>
    <string name="button_explore">KHÁM PHÁ</string>
    <string name="info_no_recording">Chưa có bài thu âm.</string>

    <!-- Artist sorting spinner -->
    <string-array name="spinner_sorting">
        <item>Hot trend</item>
        <item>Alphabetical</item>
    </string-array>
    <string name="title_activity_ksetting">Settings</string>

    <string name="action_remove_favorite">Xóa khỏi yêu thích</string>
    <string name="action_add_favorite">Thêm vào yêu thích</string>

    <!-- Exit Dialog -->
    <string name="dialog_exit_title">Thoát ứng dụng</string>
    <string name="dialog_exit_msg">Bạn có chắc chắn muốn thoát ứng dụng bây giờ?</string>
    <string name="dialog_exit_positive">Thoát</string>
    <string name="dialog_exit_negative">Hủy</string>

    <!-- Recover dialog -->
    <string name="dialog_recover_title">Lỗi ứng dụng</string>
    <string name="dialog_recover_msg">Rất tiếc đã xảy ra lỗi trong quá trình sử dụng. Chúng tôi sẽ cập nhật ứng dụng trong thời gian sớm nhất. Xin lỗi bạn vì sự bất tiện này.</string>
    <string name="dialog_recover_positive">OK</string>

    <!-- Dialog -->
    <string name="dialog_negative">Hủy</string>
    <string name="dialog_positve">Đồng Ý</string>
    <string name="dialog_msg_deleting_file">Đang xóa thu âm cũ…</string>

    <!-- Toast message -->
    <string name="toast_video_init_fail">Lỗi khi khởi tạo video. Hãy thử lại!</string>
    <string name="toast_record_not_available">Thu âm chưa khả dụng, xin hãy đợi đến khi video bắt đầu phát.</string>
    <string name="toast_added_favorite">Đã thêm vào yêu thích</string>
    <string name="toast_removed_favorite">Đã xóa khỏi yêu thích</string>
    <string name="toast_error_reading_directory">Không thể truy xuất thư mục lưu trữ file thu âm. Xin hãy thử lại sau!</string>
    <string name="toast_delete_file_success">File được xóa thành công!</string>
    <string name="toast_delete_file_error">Lỗi khi xóa file. Hãy thử lại sau!</string>
    <string name="toast_record_length_too_short">Độ dài bài hát thu âm tối thiểu là 20 giây.</string>

    <!-- Message -->
    <string name="action_feedback">Gửi phản hồi tới…</string>
    <string name="action_feedback_no_email_client">Không tồn tại trình email khả dụng.</string>
    <string name="action_delete_old_recording">Đang xóa file thu âm cũ…</string>

</resources>
